--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "multer": "^1.4.2",
     "nanoid": "^2.1.11",
     "promise-mysql": "^4.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
